Styling for mobile

--- a/Site/index.html
+++ b/Site/index.html
@@ -79,7 +79,8 @@
         $quoteText = document.getElementById("quote")
 
         if (isMobile) {
-            $quoteText.classList.add("w3-large");
+            $quoteText.classList.add("w3-medium");
+            document.getElementById("episode").classList.add("w3-small");
         }
 
 
