--- a/Site/index.html
+++ b/Site/index.html
@@ -33,7 +33,6 @@
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
 
     <div id="content" class="w3-display-middle">
-        <p class="w3-large w3-center">Peep Quote</p>
         <h1 id="quote" class="w3-xxlarge centre-align">Loading</h1>
         <p id="episode" class="w3-large w3-center"></p>
 
@@ -79,8 +78,8 @@
         $quoteText = document.getElementById("quote")
 
         if (isMobile) {
-            $quoteText.classList.add("w3-medium");
-            document.getElementById("episode").classList.add("w3-small");
+            $quoteText.classList.add("w3-small");
+            document.getElementById("episode").classList.add("w3-tiny");
         }
 
 
