--- a/Site/index.html
+++ b/Site/index.html
@@ -80,7 +80,7 @@
         $quoteText = document.getElementById("quote")
 
         if (isMobile) {
-            $outer.classList.add("mobile-quote");
+            document.getElementById("outer").classList.add("mobile-quote");
             document.getElementById("episode").classList.add("w3-tiny");
         }
 
